[UAT deffects fix] fixed In in-focus, text overlapping the image for urdu language

--- a/core/static/css/v2/pages/home/home-page.less
+++ b/core/static/css/v2/pages/home/home-page.less
@@ -640,6 +640,9 @@
     .grid {
       margin-bottom: 20px;
     }
+    .infocus-title-primary {
+      padding-top: 10px;
+    }
   }
 
   #myCarousel-2 {
@@ -808,4 +811,12 @@
     display: block !important;
   }
 
+}
+
+@media (min-width: @screen-md-min) and (max-width: @screen-md-max) {
+ .home-article-grid-1 {
+   .infocus-title-primary {
+     padding-top: 10px;
+   }
+ }
 }
